# blog_bootstrap_template

./: .gitignore  contact.html  index.html  post_detail.html  pyproject.toml  search.html  signin.html  signup.html  thanks.html
blog/: db.sqlite3
blog/blog/: settings.py
blog/myblog/: forms.py  models.py  urls.py  views.py
blog/myblog/migrations/: 0001_initial.py  0002_alter_post_content_alter_post_created_at_and_more.py  0003_comment.py
blog/myblog/static/js/: script.js
blog/myblog/templates/myblog/: about.html  base.html  footer.html  home.html  index.html  post_detail.html  search.html  signin.html  signup.html  tag.html
blog/myblog/templates/myblog/block/: aside.html  comments.html  footer.html  header.html  navbar.html  search_form.html  slider.html
css/: style.css
