[tool.poetry]
name = "blog-bootstrap-template"
version = "0.1.0"
description = ""
authors = ["Aleksandr Kuznetsov <aleksandr.kuznetsov@dualbootpartners.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
pillow = "^10.4.0"
django-ckeditor = "^6.7.1"
django-taggit = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
